fix(overlap): fix chart text overlap bug

--- a/src/components/charts/SummaryPieChart/SummaryPieChart.less
+++ b/src/components/charts/SummaryPieChart/SummaryPieChart.less
@@ -33,3 +33,9 @@
 .summary-pie-chart__legend-item-value {
   margin-top: 8px;
 }
+
+.summary-pie-chart__legend-item-name {
+  white-space: nowrap;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+}
